--- a/mvp-sprint-analise-dados/mvp-sprint-analise-dados-final.ipynb
+++ b/mvp-sprint-analise-dados/mvp-sprint-analise-dados-final.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,37 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "from sklearn.datasets import fetch_california_housing"
+    "# Imports necessários\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import urllib.request\n",
+    "from urllib.parse import quote\n",
+    "from io import StringIO, BytesIO, TextIOWrapper\n",
+    "from zipfile import ZipFile\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import f_classif\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import f1_score\n"
    ]
   },
   {
@@ -86,82 +116,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Carga do dataset\n",
-    "california_housing = fetch_california_housing(as_frame=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Apresenta informações sobre o dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".. _california_housing_dataset:\n",
-      "\n",
-      "California Housing dataset\n",
-      "--------------------------\n",
-      "\n",
-      "**Data Set Characteristics:**\n",
-      "\n",
-      "    :Number of Instances: 20640\n",
-      "\n",
-      "    :Number of Attributes: 8 numeric, predictive attributes and the target\n",
-      "\n",
-      "    :Attribute Information:\n",
-      "        - MedInc        median income in block group\n",
-      "        - HouseAge      median house age in block group\n",
-      "        - AveRooms      average number of rooms per household\n",
-      "        - AveBedrms     average number of bedrooms per household\n",
-      "        - Population    block group population\n",
-      "        - AveOccup      average number of household members\n",
-      "        - Latitude      block group latitude\n",
-      "        - Longitude     block group longitude\n",
-      "\n",
-      "    :Missing Attribute Values: None\n",
-      "\n",
-      "This dataset was obtained from the StatLib repository.\n",
-      "https://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\n",
-      "\n",
-      "The target variable is the median house value for California districts,\n",
-      "expressed in hundreds of thousands of dollars ($100,000).\n",
-      "\n",
-      "This dataset was derived from the 1990 U.S. census, using one row per census\n",
-      "block group. A block group is the smallest geographical unit for which the U.S.\n",
-      "Census Bureau publishes sample data (a block group typically has a population\n",
-      "of 600 to 3,000 people).\n",
-      "\n",
-      "A household is a group of people residing within a home. Since the average\n",
-      "number of rooms and bedrooms in this dataset are provided per household, these\n",
-      "columns may take surprisingly large values for block groups with few households\n",
-      "and many empty houses, such as vacation resorts.\n",
-      "\n",
-      "It can be downloaded/loaded using the\n",
-      ":func:`sklearn.datasets.fetch_california_housing` function.\n",
-      "\n",
-      ".. topic:: References\n",
-      "\n",
-      "    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\n",
-      "      Statistics and Probability Letters, 33 (1997) 291-297\n",
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>department</th>\n",
+       "      <th>day</th>\n",
+       "      <th>team</th>\n",
+       "      <th>targeted_productivity</th>\n",
+       "      <th>smv</th>\n",
+       "      <th>wip</th>\n",
+       "      <th>over_time</th>\n",
+       "      <th>incentive</th>\n",
+       "      <th>idle_time</th>\n",
+       "      <th>idle_men</th>\n",
+       "      <th>no_of_style_change</th>\n",
+       "      <th>no_of_workers</th>\n",
+       "      <th>actual_productivity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>sweing</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>26.16</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>7080</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0.940725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.886500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>sweing</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.800570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>sweing</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>11.41</td>\n",
+       "      <td>968.0</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.800570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>Quarter1</td>\n",
+       "      <td>sweing</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>1170.0</td>\n",
+       "      <td>1920</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.800382</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       date   quarter  department       day  team  targeted_productivity  \\\n",
+       "0  1/1/2015  Quarter1      sweing  Thursday     8                   0.80   \n",
+       "1  1/1/2015  Quarter1  finishing   Thursday     1                   0.75   \n",
+       "2  1/1/2015  Quarter1      sweing  Thursday    11                   0.80   \n",
+       "3  1/1/2015  Quarter1      sweing  Thursday    12                   0.80   \n",
+       "4  1/1/2015  Quarter1      sweing  Thursday     6                   0.80   \n",
+       "\n",
+       "     smv     wip  over_time  incentive  idle_time  idle_men  \\\n",
+       "0  26.16  1108.0       7080         98        0.0         0   \n",
+       "1   3.94     NaN        960          0        0.0         0   \n",
+       "2  11.41   968.0       3660         50        0.0         0   \n",
+       "3  11.41   968.0       3660         50        0.0         0   \n",
+       "4  25.90  1170.0       1920         50        0.0         0   \n",
+       "\n",
+       "   no_of_style_change  no_of_workers  actual_productivity  \n",
+       "0                   0           59.0             0.940725  \n",
+       "1                   0            8.0             0.886500  \n",
+       "2                   0           30.5             0.800570  \n",
+       "3                   0           30.5             0.800570  \n",
+       "4                   0           56.0             0.800382  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(california_housing.DESCR)"
+    "# Carga do dataset\n",
+    "uci_url = 'https://archive.ics.uci.edu/static/public/597/'\n",
+    "predict_student_file = 'productivity+prediction+of+garment+employees.zip'\n",
+    "request = urllib.request.urlopen(uci_url + urllib.parse.quote(predict_student_file))\n",
+    "zipfile = ZipFile(BytesIO(request.read()))\n",
+    "filepath = TextIOWrapper(zipfile.open('garments_worker_productivity.csv'), encoding='utf-8')\n",
+    "dataset = pd.read_csv(filepath, sep=',')\n",
+    "\n",
+    "dataset.head()"
    ]
   },
   {
