--- a/mvp-sprint-analise-dados/mvp-sprint-analise-dados-final.ipynb
+++ b/mvp-sprint-analise-dados/mvp-sprint-analise-dados-final.ipynb
@@ -25,27 +25,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Descrição do Problema** - Criar um notebook apresentando as fases de definição do problema, coleta e análise de dados, e pré-processamento do dataset 'California_Housing_Dataset'.\n",
+    "**Descrição do Problema** - Criar um notebook apresentando as fases de definição do problema, coleta e análise de dados, e pré-processamento do dataset 'Productivity Prediction of Garment Employees'.\n",
     "\n",
-    "**Dataset** - O dataset inclui características de casas e estatísticas do censo do estado da Califórnia (EUA) de 1990.\n",
+    "**Dataset** - O dataset inclui atributos do processo de fabricação de vestuário e a produtividade dos trabalhadores. A indústria do vestuário faz uso intensivo de mão de obra, com muitos processos sendo executados de forma manual. O atendimento da alta procura de produtos de vestuário depende do desempenho da produção e entrega dos trabalhores das empresas dessa indústria. O dataset pode ser utilizado para fins de regressão ou de classificação.\n",
     "\n",
-    "O dataset é composto de 20640 instâncias e 8 atributos.\n",
+    "O dataset é composto de 1197 instâncias e 15 atributos.\n",
     "\n",
-    "Link para acessar o dataset - https://www.kaggle.com/code/olanrewajurasheed/california-housing-dataset\n",
-    "\n",
-    "O dataset também está disponível na biblioteca scikit-learn."
+    "Link para acessar o dataset - http://archive.ics.uci.edu/dataset/597/productivity+prediction+of+garment+employees"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importação de bibliotecas"
+    "### Definição do Problema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coleta e Análise de Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importa bibliotecas necessárias para a execução dos procedimentos implementados no notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,56 +67,35 @@
     "\n",
     "# Imports necessários\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
     "import urllib.request\n",
     "from urllib.parse import quote\n",
     "from io import StringIO, BytesIO, TextIOWrapper\n",
     "from zipfile import ZipFile\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.ensemble import VotingClassifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import f_classif\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import f1_score\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Funções utilitárias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Carga e preparação dos dados"
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.model_selection import KFold\n",
+    "# from sklearn.model_selection import cross_val_score\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "# from sklearn.tree import DecisionTreeClassifier\n",
+    "# from sklearn.naive_bayes import GaussianNB\n",
+    "# from sklearn.svm import SVC\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
+    "# from sklearn.pipeline import Pipeline\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.ensemble import BaggingClassifier\n",
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# from sklearn.ensemble import ExtraTreesClassifier\n",
+    "# from sklearn.ensemble import VotingClassifier\n",
+    "# from sklearn.ensemble import AdaBoostClassifier\n",
+    "# from sklearn.ensemble import GradientBoostingClassifier\n",
+    "# from sklearn.feature_selection import SelectKBest\n",
+    "# from sklearn.feature_selection import f_classif\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -116,7 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carga do dataset\n",
+    "uci_url = 'https://archive.ics.uci.edu/static/public/597/'\n",
+    "productivity_prediction_file = 'productivity+prediction+of+garment+employees.zip'\n",
+    "request = urllib.request.urlopen(uci_url + urllib.parse.quote(productivity_prediction_file))\n",
+    "zipfile = ZipFile(BytesIO(request.read()))\n",
+    "filepath = TextIOWrapper(zipfile.open('garments_worker_productivity.csv'), encoding='utf-8')\n",
+    "dataset = pd.read_csv(filepath, sep=',')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,21 +282,362 @@
        "4                   0           56.0             0.800382  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Carga do dataset\n",
-    "uci_url = 'https://archive.ics.uci.edu/static/public/597/'\n",
-    "predict_student_file = 'productivity+prediction+of+garment+employees.zip'\n",
-    "request = urllib.request.urlopen(uci_url + urllib.parse.quote(predict_student_file))\n",
-    "zipfile = ZipFile(BytesIO(request.read()))\n",
-    "filepath = TextIOWrapper(zipfile.open('garments_worker_productivity.csv'), encoding='utf-8')\n",
-    "dataset = pd.read_csv(filepath, sep=',')\n",
+    "dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>department</th>\n",
+       "      <th>day</th>\n",
+       "      <th>team</th>\n",
+       "      <th>targeted_productivity</th>\n",
+       "      <th>smv</th>\n",
+       "      <th>wip</th>\n",
+       "      <th>over_time</th>\n",
+       "      <th>incentive</th>\n",
+       "      <th>idle_time</th>\n",
+       "      <th>idle_men</th>\n",
+       "      <th>no_of_style_change</th>\n",
+       "      <th>no_of_workers</th>\n",
+       "      <th>actual_productivity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1192</th>\n",
+       "      <td>3/11/2015</td>\n",
+       "      <td>Quarter2</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.628333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1193</th>\n",
+       "      <td>3/11/2015</td>\n",
+       "      <td>Quarter2</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.625625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1194</th>\n",
+       "      <td>3/11/2015</td>\n",
+       "      <td>Quarter2</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.625625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1195</th>\n",
+       "      <td>3/11/2015</td>\n",
+       "      <td>Quarter2</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.505889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1196</th>\n",
+       "      <td>3/11/2015</td>\n",
+       "      <td>Quarter2</td>\n",
+       "      <td>finishing</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>720</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.394722</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   quarter department        day  team  targeted_productivity  \\\n",
+       "1192  3/11/2015  Quarter2  finishing  Wednesday    10                   0.75   \n",
+       "1193  3/11/2015  Quarter2  finishing  Wednesday     8                   0.70   \n",
+       "1194  3/11/2015  Quarter2  finishing  Wednesday     7                   0.65   \n",
+       "1195  3/11/2015  Quarter2  finishing  Wednesday     9                   0.75   \n",
+       "1196  3/11/2015  Quarter2  finishing  Wednesday     6                   0.70   \n",
+       "\n",
+       "      smv  wip  over_time  incentive  idle_time  idle_men  no_of_style_change  \\\n",
+       "1192  2.9  NaN        960          0        0.0         0                   0   \n",
+       "1193  3.9  NaN        960          0        0.0         0                   0   \n",
+       "1194  3.9  NaN        960          0        0.0         0                   0   \n",
+       "1195  2.9  NaN       1800          0        0.0         0                   0   \n",
+       "1196  2.9  NaN        720          0        0.0         0                   0   \n",
+       "\n",
+       "      no_of_workers  actual_productivity  \n",
+       "1192            8.0             0.628333  \n",
+       "1193            8.0             0.625625  \n",
+       "1194            8.0             0.625625  \n",
+       "1195           15.0             0.505889  \n",
+       "1196            6.0             0.394722  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apresenta informações sobre o dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1197 entries, 0 to 1196\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   date                   1197 non-null   object \n",
+      " 1   quarter                1197 non-null   object \n",
+      " 2   department             1197 non-null   object \n",
+      " 3   day                    1197 non-null   object \n",
+      " 4   team                   1197 non-null   int64  \n",
+      " 5   targeted_productivity  1197 non-null   float64\n",
+      " 6   smv                    1197 non-null   float64\n",
+      " 7   wip                    691 non-null    float64\n",
+      " 8   over_time              1197 non-null   int64  \n",
+      " 9   incentive              1197 non-null   int64  \n",
+      " 10  idle_time              1197 non-null   float64\n",
+      " 11  idle_men               1197 non-null   int64  \n",
+      " 12  no_of_style_change     1197 non-null   int64  \n",
+      " 13  no_of_workers          1197 non-null   float64\n",
+      " 14  actual_productivity    1197 non-null   float64\n",
+      "dtypes: float64(6), int64(5), object(4)\n",
+      "memory usage: 140.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Informações sobre o dataset\n",
+    "dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Attribute Information:\n",
     "\n",
-    "dataset.head()"
+    "date: Date in MM-DD-YYYY\n",
+    "\n",
+    "day: Day of the Week\n",
+    "\n",
+    "quarter: A portion of the month. A month was divided into four quarters\n",
+    "\n",
+    "department: Associated department with the instance\n",
+    "\n",
+    "teamno: Associated team number with the instance\n",
+    "\n",
+    "noofworkers: Number of workers in each team\n",
+    "\n",
+    "noofstylechange: Number of changes in the style of a particular product\n",
+    "\n",
+    "targetedproductivity: Targeted productivity set by the Authority for each team for each day.\n",
+    "\n",
+    "smv: Standard Minute Value, it is the allocated time for a task\n",
+    "\n",
+    "WIP: Work in progress. Includes the number of unfinished items for products\n",
+    "\n",
+    "overtime: Represents the amount of overtime by each team in minutes\n",
+    "\n",
+    "incentive: Represents the amount of financial incentive (in BDT) that enables or motivates a particular course of action.\n",
+    "\n",
+    "idletime: The amount of time when the production was interrupted due to several reasons\n",
+    "\n",
+    "idlemen: The number of workers who were idle due to production interruption\n",
+    "\n",
+    "actual_productivity: The actual % of productivity that was delivered by the workers. It ranges from 0–1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "department\n",
+       "sweing        691\n",
+       "finishing     257\n",
+       "finishing     249\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tipos de departamentos\n",
+    "dataset['department'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Juntando os dois departamentos finishing pois a presença de um branco os dividiu em duas categorias\n",
+    "dataset['department'] = dataset['department'].apply(lambda x: 'finishing' if x.replace(\" \",\"\") == 'finishing' else 'sewing' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "department\n",
+       "sewing       691\n",
+       "finishing    506\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando a junção feita acima\n",
+    "dataset['department'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pré-processamento de Dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções utilitárias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Carga e preparação dos dados"
    ]
   },
   {
